docs: add documentation for listOpenings
